--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     justify-content:center;
     height:100vh;
     min-height:450px;
-    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)) ,url(https://cdn.pixabay.com/photo/2017/07/25/18/56/lemon-2539163_960_720.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)) ,url(https://raw.githubusercontent.com/kkamdichan/Pratice01/master/lemon-2539163_1920.jpg);
     background-position: center;
     background-size: cover;
     color:#fff;
